@@ -1039,7 +1039,7 @@ static void defaultMachine(/*@out@*/ const char ** arch,
 	    strcpy(un.machine, "mipsel");
 #	elif defined(__MIPSEB__) || defined(__MIPSEB) || defined(_MIPSEB)
 	   /* big endian */
-		strcpy(un.machine, "mipseb");
+		strcpy(un.machine, "mips");
 #	endif
 
 #	if defined(__hpux) && defined(_SC_CPU_VERSION)
